# library_test_task

./: README.md  pyproject.toml  requirements.txt
library_project/: books.json  genres.json
library_project/api/: serializers.py  urls.py  views.py  yasg.py
library_project/fixtures/: autors.json
library_project/library_project/: settings.py  urls.py
library_project/static/css/: styles.css
library_project/static/js/: script.js
library_project/templates/: base.html  debt.html  index.html  reader_books.html
library_project/templates/includes/: footer.html  header.html
library_project/templates/registration/: logged_out.html  login.html  registration_form.html
library_project/user/: admin.py  forms.py  models.py  urls.py  views.py
library_project/user/migrations/: 0001_initial.py  0002_userbook.py  0003_alter_customuser_first_name_and_more.py  0004_alter_userbook_options_userbook_returned_date.py  0005_alter_userbook_returned_date.py  0006_userbook_is_returned.py
